Fix snackbar style on mobile viewports

--- a/src/admin/components/snackbars/style.scss
+++ b/src/admin/components/snackbars/style.scss
@@ -1,8 +1,9 @@
 @use "../../../wp-base-styles.scss" as wpBaseStyles;
 
 .chbe-admin-snackbars {
-	right: wpBaseStyles.$grid-unit-20;
+	right: 0;
 	bottom: wpBaseStyles.$grid-unit-20;
+	padding: 0 wpBaseStyles.$grid-unit-20;
 	position: fixed;
 
 	.components-snackbar-list__notice-container {
